// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayButton should render audio correctly without duration details 1`] = `
.emotion-0 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  height: 5rem;
  width: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-0:hover,
.emotion-0:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media screen and (forced-colors: active) {
  .emotion-0 {
    background-color: canvas;
    border: 0.0625rem solid canvasText;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-0:hover,
  .emotion-0:focus {
    background-color: canvas;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-0:focus {
    border: none;
  }
}

.emotion-1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-2>svg {
    color: canvasText;
  }
}

.emotion-3 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

<div>
  <button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Play audio, "Dog barks at cat."
    </span>
    <div
      aria-hidden="true"
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        focusable="false"
        height="12px"
        viewBox="0 0 13 12"
        width="13px"
      >
        <path
          d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
        />
        <path
          d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`PlayButton should render audio indicator correctly 1`] = `
.emotion-0 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  height: 5rem;
  width: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-0:hover,
.emotion-0:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media screen and (forced-colors: active) {
  .emotion-0 {
    background-color: canvas;
    border: 0.0625rem solid canvasText;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-0:hover,
  .emotion-0:focus {
    background-color: canvas;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-0:focus {
    border: none;
  }
}

.emotion-1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2 {
  margin-top: 0.5rem;
}

.emotion-2>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-2>svg {
    color: canvasText;
  }
}

.emotion-3 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-5 {
  display: block;
  margin-top: 0.5rem;
  color: #FFFFFF;
}

@media screen and (forced-colors: active) {
  .emotion-5 {
    color: canvasText;
  }
}

<div>
  <button
    class="foo emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Play audio, "Dog barks at cat.", 2 minutes 30 seconds
    </span>
    <div
      aria-hidden="true"
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        focusable="false"
        height="12px"
        viewBox="0 0 13 12"
        width="13px"
      >
        <path
          d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
        />
        <path
          d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
        />
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="emotion-5"
      datetime="PT2M30S"
    >
      2:30
    </time>
  </button>
</div>
`;

exports[`PlayButton should render video by default 1`] = `
.emotion-0 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  height: 5rem;
  width: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-0:hover,
.emotion-0:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media screen and (forced-colors: active) {
  .emotion-0 {
    background-color: canvas;
    border: 0.0625rem solid canvasText;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-0:hover,
  .emotion-0:focus {
    background-color: canvas;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-0:focus {
    border: none;
  }
}

.emotion-1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-2>svg {
    color: canvasText;
  }
}

.emotion-3 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

<div>
  <button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Play video, "Dog chases cat."
    </span>
    <div
      aria-hidden="true"
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        focusable="false"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M.5.6h12v12H.5z"
          />
          <path
            d="M2.144.96v11.28l8.712-5.64z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
  </button>
</div>
`;

exports[`PlayButton should render video correctly with duration and guidance message 1`] = `
.emotion-0 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  height: 5rem;
  width: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-0:hover,
.emotion-0:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media screen and (forced-colors: active) {
  .emotion-0 {
    background-color: canvas;
    border: 0.0625rem solid canvasText;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-0:hover,
  .emotion-0:focus {
    background-color: canvas;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-0:focus {
    border: none;
  }
}

.emotion-1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2 {
  margin-top: 0.5rem;
}

.emotion-2>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-2>svg {
    color: canvasText;
  }
}

.emotion-3 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-5 {
  display: block;
  margin-top: 0.5rem;
  color: #FFFFFF;
}

@media screen and (forced-colors: active) {
  .emotion-5 {
    color: canvasText;
  }
}

<div>
  <button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Guidance: May contain strong language that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
    </span>
    <div
      aria-hidden="true"
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        focusable="false"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M.5.6h12v12H.5z"
          />
          <path
            d="M2.144.96v11.28l8.712-5.64z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="emotion-5"
      datetime="PT2M30S"
    >
      2:30
    </time>
  </button>
</div>
`;

exports[`PlayButton should render video correctly without duration details 1`] = `
.emotion-0 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  height: 5rem;
  width: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-0:hover,
.emotion-0:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media screen and (forced-colors: active) {
  .emotion-0 {
    background-color: canvas;
    border: 0.0625rem solid canvasText;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-0:hover,
  .emotion-0:focus {
    background-color: canvas;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-0:focus {
    border: none;
  }
}

.emotion-1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-2>svg {
    color: canvasText;
  }
}

.emotion-3 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

<div>
  <button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Play video, "Dog chases cat."
    </span>
    <div
      aria-hidden="true"
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        focusable="false"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M.5.6h12v12H.5z"
          />
          <path
            d="M2.144.96v11.28l8.712-5.64z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
  </button>
</div>
`;

exports[`PlayButton should render video indicator correctly 1`] = `
.emotion-0 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  height: 5rem;
  width: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-0:hover,
.emotion-0:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media screen and (forced-colors: active) {
  .emotion-0 {
    background-color: canvas;
    border: 0.0625rem solid canvasText;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-0:hover,
  .emotion-0:focus {
    background-color: canvas;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-0:focus {
    border: none;
  }
}

.emotion-1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2 {
  margin-top: 0.5rem;
}

.emotion-2>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-2>svg {
    color: canvasText;
  }
}

.emotion-3 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-5 {
  display: block;
  margin-top: 0.5rem;
  color: #FFFFFF;
}

@media screen and (forced-colors: active) {
  .emotion-5 {
    color: canvasText;
  }
}

<div>
  <button
    class="foo emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Play video, "Dog chases cat.", 2 minutes 30 seconds
    </span>
    <div
      aria-hidden="true"
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        focusable="false"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M.5.6h12v12H.5z"
          />
          <path
            d="M2.144.96v11.28l8.712-5.64z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="emotion-5"
      datetime="PT2M30S"
    >
      2:30
    </time>
  </button>
</div>
`;
